--- a/Quanlyquancafe/Quanlyquancafe/Main.resx
+++ b/Quanlyquancafe/Quanlyquancafe/Main.resx
@@ -185,6 +185,9 @@
     <value>247, 193</value>
   </metadata>
   <metadata name="ofdMedia.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>510, 193</value>
+    <value>321, 118</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>175</value>
   </metadata>
 </root>
